force-app/main/default/objects/Equipment__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>