force-app/main/default/objects/Equipment__c/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Equipment ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>