force-app/main/default/objects/Equipment__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.O. Smith</fullName>
            </value>
            <value>
                <fullName>AC Delco</fullName>
            </value>
            <value>
                <fullName>Addison</fullName>
            </value>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Aircoaire</fullName>
            </value>
            <value>
                <fullName>AirEase</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Airtemp</fullName>
            </value>
            <value>
                <fullName>ALLIANCE</fullName>
            </value>
            <value>
                <fullName>ALPINE</fullName>
            </value>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>American Stand</fullName>
            </value>
            <value>
                <fullName>American Water</fullName>
            </value>
            <value>
                <fullName>Ameristar</fullName>
            </value>
            <value>
                <fullName>Amtrol</fullName>
            </value>
            <value>
                <fullName>Aprilaire</fullName>
            </value>
            <value>
                <fullName>Aquastar</fullName>
            </value>
            <value>
                <fullName>Arcoliner</fullName>
            </value>
            <value>
                <fullName>Armstrong</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Barber</fullName>
            </value>
            <value>
                <fullName>Bard</fullName>
            </value>
            <value>
                <fullName>Basmore</fullName>
            </value>
            <value>
                <fullName>BDP</fullName>
            </value>
            <value>
                <fullName>Bock</fullName>
            </value>
            <value>
                <fullName>Borg Warner</fullName>
            </value>
            <value>
                <fullName>Bradford White</fullName>
            </value>
            <value>
                <fullName>Bryant</fullName>
            </value>
            <value>
                <fullName>Burnham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>