force-app/main/default/objects/Equipment__c/fields/SEER__c.field-meta.xml
<CustomField>
    <fullName>SEER__c</fullName>
    <label>SEER</label>
    <length>64</length>
    <type>Text</type>
</CustomField>