force-app/main/default/objects/Equipment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIR HANDLER</fullName>
            </value>
            <value>
                <fullName>COIL</fullName>
            </value>
            <value>
                <fullName>CONDENSER</fullName>
            </value>
            <value>
                <fullName>COOLING</fullName>
            </value>
            <value>
                <fullName>HEATING</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>WATER HTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>