force-app/main/default/objects/Equipment__c/fields/Warranty_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Date__c</fullName>
    <label>Warranty Date</label>
    <type>Date</type>
</CustomField>