force-app/main/default/objects/Equipment__c/fields/Worked_On__c.field-meta.xml
<CustomField>
    <fullName>Worked_On__c</fullName>
    <label>Worked On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>